--- a/.github/workflows/Codecoverage.yml
+++ b/.github/workflows/Codecoverage.yml
@@ -16,13 +16,13 @@ jobs:
       run: |
         pip install pytest
         pip install pytest-cov
-        pytest --cov=./ --cov-report=xml
+        pip install -r requirements.dev.txt
+        pytest --cov=async_spotify src/test --cov-report=xml
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1.0.5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
         flags: unittests
-        name: codecov-umbrella
-        yml: ./codecov.yml 
+        name: codecov-spotify-api
         fail_ci_if_error: true
