--- a/.github/workflows/Codecoverage.yml
+++ b/.github/workflows/Codecoverage.yml
@@ -24,12 +24,10 @@ jobs:
       env:
         scopes: "ugc-image-upload user-read-playback-state user-read-email playlist-read-collaborative user-modify-playback-state user-read-private playlist-modify-public user-library-modify user-top-read user-read-currently-playing playlist-read-private user-follow-read app-remote-control user-read-recently-played playlist-modify-private user-follow-modify user-library-read"
         redirect_url: "http://localhost:5000/"
-    - name: Generate coverage report
-      run: |
-        pip install pytest
-        pip install pytest-cov
+    - name: Setup python packages
         pip install -r requirements.dev.txt
-        pytest --cov=async_spotify src/test --cov-report=xml
+    -name: Generate coverage report
+      run: pytest -s --cov=async_spotify src/test --cov-report=xml
     - name: Upload coverage to Codecov  
       uses: codecov/codecov-action@v1.0.5
       with:
