--- a/.github/workflows/Codecoverage.yml
+++ b/.github/workflows/Codecoverage.yml
@@ -25,7 +25,7 @@ jobs:
         scopes: "ugc-image-upload user-read-playback-state user-read-email playlist-read-collaborative user-modify-playback-state user-read-private playlist-modify-public user-library-modify user-top-read user-read-currently-playing playlist-read-private user-follow-read app-remote-control user-read-recently-played playlist-modify-private user-follow-modify user-library-read"
         redirect_url: "http://localhost:5000/"
     - name: Setup python packages
-        pip install -r requirements.dev.txt
+      run: pip install -r requirements.dev.txt
     - name: Generate coverage report
       run: pytest -s --cov=async_spotify src/test --cov-report=xml
     - name: Upload coverage to Codecov
