--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,9 +1,9 @@
-aiohttp[speedups]==3.6.2
+# Tests
 pytest==5.3.5
 pytest-cov==2.8.1
 pytest-asyncio==0.10
 
+# Documentation
+mkdocs==1.0.4
 mkdocstrings
 mkdocs-material
-mkdocs
-Markdown
