--- a/.github/workflows/Codecoverage.yml
+++ b/.github/workflows/Codecoverage.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
   watch:
     types: [started]
 jobs:
@@ -19,7 +22,7 @@ jobs:
       with:
         python-version: 3.8
     - name: Setup python packages
-      run: pip install -r requirements.dev.txt
+      run: pip install -r requirements.dev.txt && pip install -r requirements.txt
     - name: Save cookie file
       run: echo "${{ secrets.cookies }}" > cookies.txt
     - name: Generate coverage report
