--- a/.github/workflows/Codecoverage.yml
+++ b/.github/workflows/Codecoverage.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Setup python packages
       run: pip install -r requirements.dev.txt && pip install -r requirements.txt
     - name: Save cookie file
-      run: echo "${{ secrets.cookies }}" > /home/runner/work/AsyncSpotify/AsyncSpotify/cookies.json && cat /home/runner/work/AsyncSpotify/AsyncSpotify/cookies.json
+      run: echo '${{ secrets.cookies }}' > /home/runner/work/AsyncSpotify/AsyncSpotify/cookies.json && cat /home/runner/work/AsyncSpotify/AsyncSpotify/cookies.json
     - name: Generate coverage report
       env:
         application_id: ${{ secrets.application_id }}
