--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,9 +1,8 @@
 # Tests
-pytest==5.3.5
+pytest==5.4.1
 pytest-cov==2.8.1
-pytest-asyncio==0.10
+pytest-asyncio==0.10.0
 
 # Documentation
-mkdocs==1.0.4
-mkdocstrings
-mkdocs-material
+mkdocstrings==0.10.0
+mkdocs-material==4.6.3
