--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -4,5 +4,7 @@ pytest-cov==2.8.1
 pytest-asyncio==0.10.0
 
 # Documentation
-mkdocstrings==0.10.0
+mkdocstrings==0.10.1
 mkdocs-material==4.6.3
+datamodel-code-generator==0.4.6
+genson==1.1.0
