--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: "Async Spotify"
 site_description: "Async wrapper in python for the spotify api"
-site_url: "https://github.com/HuiiBuh/AsyncSpotify"
+site_url: "https://huiibuh.github.io/AsyncSpotify/"
 repo_url: "https://github.com/HuiiBuh/AsyncSpotify"
 repo_name: "HuiiBuh/AsyncSpotify"
 
