--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,8 +1,11 @@
 # Tests
 pytest==5.4.1
 pytest-cov==2.8.1
+
+# Has to stay like this!
 pytest-asyncio==0.10.0
 
 # Documentation
-mkdocstrings==0.10.3
-mkdocs-material==5.1.1
+mkdocstrings==0.11.0
+mkdocs-material==5.1.3
+mkdocs-git-revision-date-localized-plugin==0.5.0
